package impl;

import model.Usuario;

public interface ServicioSpotify {
    String descargar(Usuario usuario);
}
